savedShadchan Singles detail - add field for boys to red

--- a/NasiShadchanHelper/Base.lproj/Main.storyboard
+++ b/NasiShadchanHelper/Base.lproj/Main.storyboard
@@ -917,7 +917,7 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Shadchan Notes" id="K3c-g6-71s">
+                            <tableViewSection headerTitle="Shadchan Research Notes" id="K3c-g6-71s">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="140" id="mmu-fI-xOu">
                                         <rect key="frame" x="20" y="379" width="374" height="140"/>
@@ -944,28 +944,15 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Category" id="kgb-3G-2lT">
+                            <tableViewSection headerTitle="Boys To Red" id="kgb-3G-2lT">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="140" id="WwA-TP-dh9">
-                                        <rect key="frame" x="20" y="575" width="374" height="140"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="204" id="WwA-TP-dh9">
+                                        <rect key="frame" x="20" y="575" width="374" height="204"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WwA-TP-dh9" id="tjy-9h-djz">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="140"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="204"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJb-2B-kdF">
-                                                    <rect key="frame" x="4" y="4" width="335" height="132"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="UJb-2B-kdF" firstAttribute="leading" secondItem="tjy-9h-djz" secondAttribute="leading" constant="4" id="PAv-3R-B93"/>
-                                                <constraint firstAttribute="trailing" secondItem="UJb-2B-kdF" secondAttribute="trailing" constant="4" id="eoB-xh-WOR"/>
-                                                <constraint firstItem="UJb-2B-kdF" firstAttribute="top" secondItem="tjy-9h-djz" secondAttribute="top" constant="4" id="es3-Wf-ae5"/>
-                                                <constraint firstAttribute="bottom" secondItem="UJb-2B-kdF" secondAttribute="bottom" constant="4" id="kzZ-Wz-UOB"/>
-                                            </constraints>
+                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -973,7 +960,7 @@
                             <tableViewSection headerTitle="Resume" id="CiT-nk-3UB">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="140" id="dUb-U6-e7x">
-                                        <rect key="frame" x="20" y="771" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="835" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dUb-U6-e7x" id="XDq-2u-bT4">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1004,7 +991,7 @@
                             <tableViewSection headerTitle="Self Description" id="tKb-pC-zdK">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="140" id="vma-FM-vYo">
-                                        <rect key="frame" x="20" y="967" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="1031" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vma-FM-vYo" id="RMP-AD-Ebx">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1031,7 +1018,7 @@
                             <tableViewSection headerTitle="Looking For:" id="zAE-uT-MYd">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="2dh-ej-oYz" rowHeight="140" style="IBUITableViewCellStyleDefault" id="LO8-69-kJ4">
-                                        <rect key="frame" x="20" y="1163" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="1227" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LO8-69-kJ4" id="sFS-HX-Ydr">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1053,7 +1040,7 @@
                             <tableViewSection headerTitle="Family Situation" id="IwU-RG-NYj">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="JLS-8g-OmT" rowHeight="140" style="IBUITableViewCellStyleDefault" id="oFt-Vu-sef">
-                                        <rect key="frame" x="20" y="1359" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="1423" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oFt-Vu-sef" id="4LL-cE-CI4">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1074,7 +1061,7 @@
                             <tableViewSection headerTitle="Person To Contact" id="7nY-hD-5qc">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="c1v-qI-jvR" rowHeight="140" style="IBUITableViewCellStyleDefault" id="6VU-Er-oAc">
-                                        <rect key="frame" x="20" y="1555" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="1619" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6VU-Er-oAc" id="rYp-Dp-dzW">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1091,7 +1078,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="AcB-R7-Bbn" detailTextLabel="Ybt-OQ-g1J" rowHeight="140" style="IBUITableViewCellStyleValue1" id="t3a-Y9-K9T">
-                                        <rect key="frame" x="20" y="1695" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="1759" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="t3a-Y9-K9T" id="e2g-Bg-Q4Z">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1115,7 +1102,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="dIB-tP-O4E" detailTextLabel="pJ4-Vb-oVZ" rowHeight="140" style="IBUITableViewCellStyleValue1" id="DR2-Co-UYi">
-                                        <rect key="frame" x="20" y="1835" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="1899" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DR2-Co-UYi" id="4rN-9J-OCe">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1140,7 +1127,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="140" id="sj2-ve-l05">
-                                        <rect key="frame" x="20" y="1975" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="2039" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sj2-ve-l05" id="Mi9-tJ-JF6">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1152,7 +1139,7 @@
                             <tableViewSection headerTitle="Person To Contact" id="RxK-2o-XGi">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="wWa-hF-OHb" rowHeight="140" style="IBUITableViewCellStyleDefault" id="0hd-6L-peT">
-                                        <rect key="frame" x="20" y="2171" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="2235" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0hd-6L-peT" id="NYd-gI-qSh">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1169,7 +1156,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="IdO-s6-HAk" detailTextLabel="a0Y-sS-l7K" rowHeight="140" style="IBUITableViewCellStyleValue1" id="rvm-MZ-61G">
-                                        <rect key="frame" x="20" y="2311" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="2375" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rvm-MZ-61G" id="dOK-lp-eRH">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1193,7 +1180,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="p0y-EX-Hmz" detailTextLabel="yJg-L5-Hzb" rowHeight="140" style="IBUITableViewCellStyleValue1" id="azP-aa-ApZ">
-                                        <rect key="frame" x="20" y="2451" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="2515" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="azP-aa-ApZ" id="kqv-bA-Kx8">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
@@ -1218,7 +1205,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="140" id="daB-ke-WGJ">
-                                        <rect key="frame" x="20" y="2591" width="374" height="140"/>
+                                        <rect key="frame" x="20" y="2655" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="daB-ke-WGJ" id="5gR-GP-P2x">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
