--- a/NasiShadchanHelper/Base.lproj/Main.storyboard
+++ b/NasiShadchanHelper/Base.lproj/Main.storyboard
@@ -87,9 +87,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="buE-wa-ZLn">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="BoJ-wp-zOX">
+                                    <rect key="frame" x="10" y="20" width="394" height="51"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="caM-j5-Aiw"/>
+                                    </constraints>
+                                    <segments>
+                                        <segment title="1 - 5 Years of Learning"/>
+                                        <segment title="5   Years of Learning"/>
+                                        <segment title="5+ Years Of Learning"/>
+                                    </segments>
+                                    <connections>
+                                        <action selector="segmentCntrlTapped:" destination="8UW-VI-db7" eventType="valueChanged" id="Cz3-Mg-RQO"/>
+                                    </connections>
+                                </segmentedControl>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="BoJ-wp-zOX" secondAttribute="trailing" constant="10" id="KvM-AA-Gwj"/>
+                                <constraint firstItem="BoJ-wp-zOX" firstAttribute="top" secondItem="buE-wa-ZLn" secondAttribute="top" constant="20" id="du5-dR-fH9"/>
+                                <constraint firstItem="BoJ-wp-zOX" firstAttribute="leading" secondItem="buE-wa-ZLn" secondAttribute="leading" constant="10" id="jdM-Pp-1sh"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SingleCellID" rowHeight="225" id="6xu-3E-waT" customClass="SingleTableViewCell" customModule="NasiShadchanHelper" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="225"/>
+                                <rect key="frame" x="0.0" y="118" width="414" height="225"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6xu-3E-waT" id="5sm-Nd-koB">
                                     <rect key="frame" x="0.0" y="0.0" width="383" height="225"/>
@@ -184,6 +210,9 @@
                         </connections>
                     </tableView>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black"/>
+                    <connections>
+                        <outlet property="segmentCntrl" destination="BoJ-wp-zOX" id="AZM-Tk-f5w"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tAN-g8-3Ou" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -897,21 +926,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jlY-Hb-hwg">
+                                <rect key="frame" x="10" y="98" width="394" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="ebB-Dl-g6G"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Full Time Yeshiva"/>
+                                    <segment title="Full Time College/Working"/>
+                                    <segment title="Yeshiva  and College/Working"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentCntrlTapped:" destination="GaO-Fa-NYZ" eventType="valueChanged" id="dwZ-QP-vrS"/>
+                                </connections>
+                            </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZqL-pb-SpT">
-                                <rect key="frame" x="0.0" y="96" width="414" height="717"/>
+                                <rect key="frame" x="0.0" y="168" width="414" height="645"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0RU-V0-XtS">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="168" width="414" height="645"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgNoFav" translatesAutoresizingMaskIntoConstraints="NO" id="T9F-kQ-mQe">
-                                        <rect key="frame" x="0.0" y="252.5" width="414" height="160"/>
+                                        <rect key="frame" x="0.0" y="212.5" width="414" height="160"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="160" id="ik1-dv-Yd1"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Favorites Yet!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLA-Lv-wlh">
-                                        <rect key="frame" x="128" y="425" width="158" height="24"/>
+                                        <rect key="frame" x="128" y="385" width="158" height="24"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -929,19 +972,23 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="ZqL-pb-SpT" firstAttribute="top" secondItem="YjH-Hy-oSH" secondAttribute="top" constant="8" id="7aF-gy-CYR"/>
-                            <constraint firstItem="0RU-V0-XtS" firstAttribute="top" secondItem="YjH-Hy-oSH" secondAttribute="top" id="9eZ-jl-itW"/>
+                            <constraint firstItem="0RU-V0-XtS" firstAttribute="top" secondItem="ZqL-pb-SpT" secondAttribute="top" id="BHd-Cd-T10"/>
                             <constraint firstItem="ZqL-pb-SpT" firstAttribute="leading" secondItem="YjH-Hy-oSH" secondAttribute="leading" id="BWk-hI-O58"/>
+                            <constraint firstItem="jlY-Hb-hwg" firstAttribute="top" secondItem="YjH-Hy-oSH" secondAttribute="top" constant="10" id="GoP-pP-GYN"/>
+                            <constraint firstItem="ZqL-pb-SpT" firstAttribute="top" secondItem="jlY-Hb-hwg" secondAttribute="bottom" constant="20" id="JFm-U7-STC"/>
                             <constraint firstItem="0RU-V0-XtS" firstAttribute="bottom" secondItem="ZqL-pb-SpT" secondAttribute="bottom" id="JIA-lE-NWH"/>
                             <constraint firstItem="0RU-V0-XtS" firstAttribute="leading" secondItem="ZqL-pb-SpT" secondAttribute="leading" id="MJn-fh-5Gx"/>
                             <constraint firstItem="ZqL-pb-SpT" firstAttribute="bottom" secondItem="YjH-Hy-oSH" secondAttribute="bottom" id="OgP-gi-auN"/>
                             <constraint firstItem="0RU-V0-XtS" firstAttribute="trailing" secondItem="ZqL-pb-SpT" secondAttribute="trailing" id="RKs-HY-kbx"/>
+                            <constraint firstItem="YjH-Hy-oSH" firstAttribute="trailing" secondItem="jlY-Hb-hwg" secondAttribute="trailing" constant="10" id="Ycs-0b-nXl"/>
                             <constraint firstItem="ZqL-pb-SpT" firstAttribute="trailing" secondItem="YjH-Hy-oSH" secondAttribute="trailing" id="e6S-cS-Q7P"/>
+                            <constraint firstItem="jlY-Hb-hwg" firstAttribute="leading" secondItem="YjH-Hy-oSH" secondAttribute="leading" constant="10" id="oK1-nH-wsq"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YjH-Hy-oSH"/>
                     </view>
                     <navigationItem key="navigationItem" title="Saved Nasi Single Profiles" id="7D5-jP-S05"/>
                     <connections>
+                        <outlet property="segmentCntrl" destination="jlY-Hb-hwg" id="1se-RZ-LK0"/>
                         <outlet property="tableView" destination="ZqL-pb-SpT" id="GiJ-UX-cuB"/>
                         <outlet property="vwNoDataFound" destination="0RU-V0-XtS" id="9iR-6B-ryV"/>
                         <segue destination="ad9-lp-W7g" kind="show" identifier="ShowDetail" id="S6H-R1-KBM"/>
